# 3D-scaning-motion-capture-

./: README.md
Exercise2/Exercise-2/: CMakeLists.txt  ImplicitSurface.h  MarchingCubes.h  Volume.h  main.cpp
Exercise3/: dragon.cpp  plot_dragon.py  surface.cpp
深度相机还原/: CMakeLists.txt  main.cpp
